Add `--add-opens` JVM flag to support reflective access via Jib